Add deployment scripts for gh-pages in package.json

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://greatosa.github.io/article-preview-component",
   "name": "article-preview-component",
   "version": "0.1.0",
   "private": true,
